// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Dismissible should render a dismissible icon button with the warning variant 1`] = `
.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: 0;
  border-radius: 100%;
  color: #3942B0;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 8px 8px 0;
  color: inherit;
  height: auto;
  margin: 0 -1px 0 0;
  padding: 0 8px;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #E8E9F8;
  color: #2d3489;
}

.emotion-2:not(:disabled):after {
  background: #3942B0;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #79A5FF;
  color: #292F7C;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2:not(:disabled):hover {
  background: none;
  color: inherit;
}

.emotion-2:focus:not(:disabled) {
  background: none;
  color: inherit;
  outline: 2px solid #0074B7;
  outline-offset: 0 !important;
}

.emotion-2:not(:disabled):active {
  background: none;
  color: inherit;
}

.emotion-0 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: 0;
  border-radius: 100%;
  color: #3942B0;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  min-width: 0;
  padding: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  border-radius: 0 8px 8px 0;
  color: inherit;
  height: auto;
  margin: 0 -1px 0 0;
  padding: 0 8px;
  width: auto;
}

.emotion-2:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
}

.emotion-2:not(:disabled):hover,
.emotion-2:not(:disabled):focus {
  background: #E8E9F8;
  color: #2d3489;
}

.emotion-2:not(:disabled):after {
  background: #3942B0;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  -webkit-transition: opacity 1s,transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-2:not(:disabled):active {
  background: #79A5FF;
  color: #292F7C;
}

.emotion-2:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  -webkit-transition: transform 0s;
  transition: transform 0s;
}

.emotion-2 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2:not(:disabled):hover {
  background: none;
  color: inherit;
}

.emotion-2:focus:not(:disabled) {
  background: none;
  color: inherit;
  outline: 2px solid #0074B7;
  outline-offset: 0 !important;
}

.emotion-2:not(:disabled):active {
  background: none;
  color: inherit;
}

<button
  aria-label="Close this message"
  class="emotion-2 emotion-3"
  color="primary"
  id="ignoreButton"
  shape="round"
  type="button"
>
  <span
    aria-labelledby="ignoreButton"
    class="emotion-0 emotion-1"
    id="ignoreSvg"
  >
    <svg
      class="icon"
      fill="currentColor"
      height="20"
      id="ignoreTitle"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</button>
`;

exports[`Alert Variants should render an alert with danger variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-2 {
  background: #FCEBEA;
  border: 1px solid #D32821;
  border-radius: 8px;
  color: #D32821;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-2 {
  background: #FCEBEA;
  border: 1px solid #D32821;
  border-radius: 8px;
  color: #D32821;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with info variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  background: #E8F5FC;
  border: 1px solid #0074B7;
  border-radius: 8px;
  color: #0074B7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  background: #E8F5FC;
  border: 1px solid #0074B7;
  border-radius: 8px;
  color: #0074B7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Variants should render an alert with warning variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-2 {
  background: #FCEEE5;
  border: 1px solid #AD5115;
  border-radius: 8px;
  color: #AD5115;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-2 {
  background: #FCEEE5;
  border: 1px solid #AD5115;
  border-radius: 8px;
  color: #AD5115;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

<div>
  <div
    class="emotion-3"
    id="auto-generated-id"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert should render an alert with default variant 1`] = `
.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  background: #E8F5FC;
  border: 1px solid #0074B7;
  border-radius: 8px;
  color: #0074B7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

.emotion-3 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-animation: fadein 500ms;
  animation: fadein 500ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 24px;
  max-width: 100%;
  padding: 0;
  position: relative;
}

@media (max-width:600px) {
  .emotion-3 {
    font-size: 14px;
    -webkit-letter-spacing: .16px;
    -moz-letter-spacing: .16px;
    -ms-letter-spacing: .16px;
    letter-spacing: .16px;
    line-height: 20px;
  }
}

.emotion-3:focus {
  outline: 2px solid #0074B7;
}

.emotion-3 a {
  color: inherit;
  font-weight: 600;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  background: #E8F5FC;
  border: 1px solid #0074B7;
  border-radius: 8px;
  color: #0074B7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 1px;
  padding: 0 8px 0 12px;
}

@media (max-width:600px) {
  .emotion-0 {
    padding: 0 8px;
  }

  .emotion-0 svg {
    width: 20px;
  }
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 12px 0;
}

@media (max-width:600px) {
  .emotion-1 {
    padding-left: 0;
  }
}

<div>
  <div
    class="emotion-3"
    id="defaultVariant"
    tabindex="-1"
  >
    <div
      class="emotion-2"
    >
      <span
        class="emotion-0"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="emotion-1"
      >
        Test Alert Text
      </div>
    </div>
  </div>
</div>
`;
